public enum Categoria {
  SUPERIOR,
  CALZADO,
  INFERIOR,
  ACCESORIO
}
