public enum Material {
  GABARDINA,
  NYLON,
  ALGODON,
  JEAN,
  CUERINA,
  PIQUE,
  ACETATO,
  DEVESTIR,
  CUERO
}
