package notifications;

import convinations.Guardarropa;

public interface Notificacion {

  void aceptar(Guardarropa guardarropa);
}
