@startuml
'https://plantuml.com/class-diagram
skinparam backgroundColor transparent
skinparam arrowFontColor royalblue
skinparam nodesep 120

class Prenda {
    colorPrincipal
    colorSecundario
    categoria()
    temperaturaLimite
    aptaClima(temperatura)
}
enum Material {
    GABARDINA, NYLON, ALGODON, ...
}
enum Trama {
    LISA, RAYADA, ESTAMPADA, ...
}

class Tipo {
    getCategoria()
}

class Borrador {
    colorPrincipal
    colorSecundario
    guardarPrenda()
}

class Uniforme {
    parteSuperior
    parteInferior
    calzado
}

class Sugerencia {
    accesorio
}

class Respuesta {
    clima
    vencimiento
}

class Guardarropas {
    generarSugerencias()
    getPrendasValidas(clima, prendas)
    aceptarPropuesta()
    declinarPropuesta()
}

interface Pronostico {
    consultarClima()
    obtenerAlertas()
}

class PronosticoAccuWeather {

}

class EstadoDelTiempo {
    parametroDuracion
    getClima()
}

class ReporteAlertas {
    alertas
    actualizarAlertas()
}

enum AlertaMeteorologica {
    GRANIZO, LLUVIA
}

enum Categoria {
    SUPERIOR, CALZADO, INFERIOR, ACCESORIO
}

interface Notificacion{
    aceptar()
}

class Agregar{
}

class Eliminar{
}

class User{
    generarSugerenciaDiaria()
    gestionarAlertaMeteorologica()
}

class Users{
    INSTANCE
    generarSugerenciasDiarias()
    gestionarAlertasClimaticas()
}

interface Actions{
    ejecutar()
}

class ActualizarVestuario{
}

class EnviarMail{
    MailSendar
}

class NotificadorAlertas{
}

class NotificacionAlerta{
}

Prenda --> "1" Material
Prenda --> "1" Tipo
Prenda --> "1" Trama
Tipo --> "1" Categoria
Borrador --> "1" Material
Borrador --> "1" Tipo
Borrador --> "1" Trama
Borrador -left..> Prenda
Uniforme -right--> "parte superior" Prenda
Uniforme --> "parte inferior" Prenda
Uniforme --> "calzado" Prenda
Sugerencia --> Uniforme
Guardarropas --> "*" Prenda
Guardarropas -right-> EstadoDelTiempo
Guardarropas ..> Sugerencia
Pronostico<|.left.PronosticoAccuWeather
PronosticoAccuWeather --> "*"Respuesta
EstadoDelTiempo-->Pronostico
Agregar--|>Notificacion
Eliminar--|>Notificacion
Guardarropas-left->"*"Notificacion
User --> "*"Guardarropas
User --> Sugerencia
Users --> "*" User
User --> "*" Actions
NotificadorAlertas --|> Actions
NotificadorAlertas..>NotificacionAlerta
Users --> "*" NotificacionAlerta
ActualizarVestuario --|> Actions
EnviarMail--|>Actions
ReporteAlertas-up->"*"AlertaMeteorologica
ReporteAlertas-->Pronostico
ReporteAlertas..>Users
NotificacionAlerta-->AlertaMeteorologica

@enduml